# CSVSearcher

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  \  compile_commands.json  get_test_data.sh  other  setup.cfg  setup.py
bm25/: Makefile  bloom.cpp  bloom.h  bm25.c  bm25.cpp  bm25.pb.cc  bm25.pb.h  bm25.proto  bm25.pyx  bm25_utils.cpp  bm25_utils.h  engine.cpp  engine.h  english_stopwords.txt  roaring.hh  serialize.cpp  serialize.h  small_string.h  vbyte_encoding.cpp  vbyte_encoding.h
bm25/cpp_testing/: Makefile  bm25  compile_commands.json  main.cpp
bm25/gen_compile_commands/: Makefile  bm25  compile_commands.json  main.cpp
bm25_model/: filename.txt  last_modified.txt
csv_search/: TODO.md  build.zig  build.zig.zon  example.py  faiss_bench.py  pruning_test.py  py_install.sh  setup.py
csv_search/.d3961063cac5f09f2718d93b4062a63d/: index.html  style.css  table.js
csv_search/data/: words_shuffled.txt
csv_search/python/: pyproject.toml  setup.py
csv_search/src/: bitvectors.zig  csv.zig  index.zig  index_manager.zig  main.zig  patricia.zig  pruning_radix_trie.zig  radix.h  radix_bindings.zig  radix_trie.zig  root.zig  server.zig  sorted_array.zig  static_integer_set.zig
demo/: index.html  main.py  style.css
demo/searchapp/: index.html  main.py  old_main.py  osm.js  table.js
local_testing/: main.cpp
tests/: bench.py  test.py
tmp_db/: filename.txt  last_modified.txt  last_modified_file.txt
zig_bm25/: build.zig  build.zig.zon
zig_bm25/croaring/: roaring.c  roaring.h
zig_bm25/old_searchapp/: style.css  table.js
(+19 files in other folders)
